# reales-rwa

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  rule.md
ai-agent/: .dockerignore  .env.example  Dockerfile  agent.py  config.py  main.py  prompts.py  pyproject.toml  requirements.txt  rules.py
ai-agent/analyzer/: fund_flow.py  profiler.py  risk.py
ai-agent/fetcher/: evm.py  solana.py
ai-agent/report/: structured.py
contracts/: Dockerfile  Dockerfile.deploy  hardhat.config.js  package-lock.json  package.json  pnpm-lock.yaml
contracts/contracts/: RWAToken.sol
contracts/evm/: hardhat.config.js
contracts/evm/contracts/: RWAToken.sol
contracts/evm/scripts/: deploy.js
contracts/scripts/: deploy.js
contracts/solana/: Anchor.toml  tsconfig.json
contracts/test/: RWAToken.test.js
docs/superpowers/specs/: 2026-05-30-reales-rwa-logo-design.md
evm/contracts/: RWAToken.sol
frontend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/compliance/: page.tsx
frontend/app/issue/: page.tsx
frontend/app/query/: page.tsx
frontend/components/logo/: Logo.tsx
frontend/lib/: chain-context.tsx  contract.ts  provider.ts
frontend/lib/i18n/: context.tsx  en.ts  zh.ts
frontend/lib/solana/: SolanaProviders.tsx  program.ts  provider.ts
scripts/: dev.sh  package.sh
solana/: Anchor.toml  package.json
solana/tests/: reales-rwa.ts
(+10 files in other folders)
